--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -28,8 +28,9 @@ body {
 }
 
 .container {
-  max-width: 1440px;
-  margin: 0 auto;
+  /* max-width: 1440px; */
+  /* margin: 0 auto; */
+  padding: 0 70px;
   @media (max-width: 1440px) {
     padding: 0 70px;
   }
